[package]
name = "framehop"
version = "0.7.2"
edition = "2021"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
categories = ["development-tools::debugging"]
description = "Stack frame unwinding support for various formats"
keywords = ["unwind", "stackwalk", "profiling", "debug"]
license = "MIT/Apache-2.0"
readme = "Readme.md"
documentation = "https://docs.rs/framehop/"
repository = "https://github.com/mstange/framehop/"
exclude = ["/.github", "/.vscode", "/tests", "/fixtures", "/big-fixtures"]

[dependencies]
gimli = "0.27.0"
thiserror = "1.0.30"
macho-unwind-info = "0.3.0"
fallible-iterator = "0.2.0"

[dev-dependencies]
object = "0.30.0"
flate2 = "1.0.23"

[profile.release]
debug = true
