[package]
name = "framehop"
version = "0.8.0"
edition = "2021"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
categories = ["development-tools::debugging"]
description = "Stack frame unwinding support for various formats"
keywords = ["unwind", "stackwalk", "profiling", "debug"]
license = "MIT/Apache-2.0"
readme = "Readme.md"
documentation = "https://docs.rs/framehop/"
repository = "https://github.com/mstange/framehop/"
exclude = ["/.github", "/.vscode", "/tests", "/fixtures", "/big-fixtures"]

[dependencies]
gimli = "0.28.1"
object = { version = "0.32", optional = true }
thiserror = "1.0.56"
macho-unwind-info = "0.4.0"
pe-unwind-info = "0.2.1"
fallible-iterator = "0.3.0"
arrayvec = "0.7.4"

[dev-dependencies]
object = "0.32"
flate2 = "1.0.28"

[profile.release]
debug = true
