[package]
name = "framehop"
version = "0.12.0"
edition = "2021"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
categories = ["development-tools::debugging"]
description = "Stack frame unwinding support for various formats"
keywords = ["unwind", "stackwalk", "profiling", "debug"]
license = "MIT/Apache-2.0"
readme = "Readme.md"
documentation = "https://docs.rs/framehop/"
repository = "https://github.com/mstange/framehop/"
exclude = ["/.github", "/.vscode", "/tests", "/fixtures", "/big-fixtures"]

[dependencies]
gimli = { version = "0.30", default-features = false, features = ["read"] }
object = { version = "0.36", default-features = false, features = ["read_core"], optional = true }
thiserror-no-std = "2.0.2"
thiserror = { version = "1.0.0", optional = true }
macho-unwind-info = { version = "0.4.0", optional = true }
pe-unwind-info = { version = "0.2.1", optional = true }
fallible-iterator = "0.3.0"
arrayvec = { version = "0.7.4", default-features = false }
cfg-if = "1.0.0"

[features]
default = ["std", "macho", "pe"]
macho = ["macho-unwind-info"]
pe = ["pe-unwind-info"]
std = ["arrayvec/std", "thiserror", "gimli/std"]

[dev-dependencies]
object = "0.36"
flate2 = "1.0.28"
itertools = "0.13"

[profile.release]
debug = true
